--- a/Proiect/project.json
+++ b/Proiect/project.json
@@ -5,8 +5,13 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[3.3.1]",
+    "UiPath.IntegrationService.Activities": "[1.21.0]",
+    "UiPath.Mail.Activities": "[2.5.10]",
+    "UiPath.MicrosoftOffice365.Activities": "[3.5.10]",
     "UiPath.System.Activities": "[25.10.4]",
-    "UiPath.UIAutomation.Activities": "[25.10.21]"
+    "UiPath.UIAutomation.Activities": "[25.10.21]",
+    "UiPath.WebAPI.Activities": "[2.3.2]",
+    "UiPath.Word.Activities": "[2.3.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -46,8 +51,14 @@
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
+      "filePath": "Process_FinancialData.xaml",
+      "uniqueId": "15d88bbf-8132-471e-a5a4-7ed8f2e69e36",
+      "input": [],
+      "output": []
+    },
+    {
       "filePath": "Main.xaml",
-      "uniqueId": "1f676198-1c5d-4623-864a-538420de41f9",
+      "uniqueId": "5469cba5-0fb3-443c-9487-5992b2d11d85",
       "input": [],
       "output": []
     }
